--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,7 @@ language: java
 
 install: true
 script:
-- "if [[ \"$TRAVIS_PULL_REQUEST\" = \"false\" && $TRAVIS_BRANCH =~ dev ]]; then mvn clean deploy -Pversioneye -DtransitiveDependencies=true --settings settings.xml; fi"
-- "if [[ \"$TRAVIS_PULL_REQUEST\" != \"false\" ]]; then mvn clean install -Pcobertura; fi"
+- "mvn clean install -Pcobertura; fi"
 
 after_sucess:
   - bash <(curl -s https://codecov.io/bash)
