--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ install: true
 script:
 - "mvn clean install -Pcobertura;"
 
-after_sucess:
+after_success:
   - bash <(curl -s https://codecov.io/bash)
 
 jdk:
