--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,8 @@ language: java
 
 install: true
 script:
-- "mvn clean install -Pcobertura;"
+- "if [[ \"$TRAVIS_PULL_REQUEST\" = \"false\" && $TRAVIS_BRANCH =~ dev ]]; then mvn clean deploy -Pversioneye -DtransitiveDependencies=true --settings settings.xml; fi"
+- "if [[ \"$TRAVIS_PULL_REQUEST\" != \"false\" ]]; then mvn clean install -Pcobertura; fi"
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
