--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,7 @@ language: java
 
 install: true
 script:
-- "if [[ \"$TRAVIS_PULL_REQUEST\" = \"false\"]]; then mvn clean deploy -Pversioneye -DtransitiveDependencies=true --settings settings.xml; fi"
-- "if [[ \"$TRAVIS_PULL_REQUEST\" != \"false\" ]]; then mvn clean install -Pcobertura; fi"
+- "mvn cobertura:cobertura"
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
